@@ -469,12 +469,13 @@ public class JTextArea extends JTextComponent
 
     try
       {
-	doc.remove(start, end);
-	doc.insertString(start, text, null);
+        doc.remove(start, end - start);
+        doc.insertString(start, text, null);
       }
     catch (BadLocationException e)
       {
-	// This cannot happen as we check offset above.
+        // This cannot happen as we check offset above.
+        throw new Error("Please report a bug", e);
       }
   }
 }
